2002-05-18  Roland McGrath  <roland@frob.com>

	* fakeroot.c (netfs_S_file_exec): Call check_openmodes and extract a
	ref to the send right with the node locked.

	* fakeroot.c (new_node): Get a reference on NP to return to the caller.
	(netfs_attempt_mkfile): Unlock before new_node call.
	(new_node): Take new arg LOCKED, says idport_ihash_lock already held.
	(netfs_S_dir_lookup, netfs_attempt_mkfile, main): Update callers.

	* fakeroot.c (fakeroot_auth_port): New variable.
	(main): Initialize it.
	(check_openmodes): New static function.
	(netfs_check_open_permissions): Rewritten using it.
	(netfs_S_dir_lookup): New function.
	(netfs_attempt_lookup, netfs_attempt_create_file): Replaced with stubs.

2002-05-13  Roland McGrath  <roland@frob.com>

	* fakeroot.c (netfs_validate_stat): Set NP->nn_translated.

	* fakeroot.c (netfs_S_file_exec): Don't lock the node (no need).
	Don't use MACH_MSG_TYPE_MOVE_SEND.

	* fakeroot.c (netfs_attempt_chmod): Handle a MODE argument with no
	S_IFMT bits set.

2002-05-13  Marcus Brinkmann  <marcus@gnu.org>

	* fakeroot.c (netfs_server_name, netfs_server_version): New
	variables.

2002-05-13  Marcus Brinkmann  <marcus@gnu.org>

	* symlink.c: Include <argp.h> and <version.h>.
	(argp_program_version, options, args_doc, doc, argp): New
	variables.
	(parse_opt): New function.
	(main): Replace argument count check and usage output by
	argp_parse invocation.

2002-05-13  Marcus Brinkmann  <marcus@gnu.org>

	* fakeroot.c (netfs_S_file_exec): New function.
	(netfs_S_io_prenotify): Fix last change.
	(netfs_S_io_postnotify): Likewise.

2002-05-13  Marcus Brinkmann  <marcus@gnu.org>

	* fakeroot.c (NETFS_S_SIMPLE): New macro.
	(netfs_S_io_get_conch): New function.
	(netfs_S_io_release_conch): New function.
	(netfs_S_io_eofnotify): New function.
	(netfs_S_io_prenotify): New function.
	(netfs_S_io_postnotify): New function.
	(netfs_S_io_readnotify): New function.
	(netfs_S_io_readsleep): New function.
	(netfs_S_io_sigio): New function.